--- a/src/css/style.css
+++ b/src/css/style.css
@@ -201,12 +201,10 @@ ol {
    cursor: pointer;
 }
 
-.photo-card:hover {
-   transition-duration: 1500ms;
-   transform: scale(1.03);
-}
-
-
+/* .photo-card:hover {
+   transition-duration: 500ms;
+   transform: scale(1.02);
+} */
 
 .img-item {
    width: 100%;
