--- a/src/css/style.css
+++ b/src/css/style.css
@@ -129,10 +129,8 @@ ol {
 .search-form {
    position: sticky;
    top: -1px;
-
    margin: 0;
    padding: 16px;
-
    display: flex;
    align-items: center;
    justify-content: center;
@@ -142,6 +140,7 @@ ol {
          rgba(2, 0, 36, 1) 0%,
          rgba(199, 6, 167, 1) 50%,
          rgba(0, 212, 255, 1) 100%);
+   z-index: 1000;
 }
 
 .input {
@@ -201,10 +200,10 @@ ol {
    cursor: pointer;
 }
 
-/* .photo-card:hover {
-   transition-duration: 500ms;
-   transform: scale(1.02);
-} */
+.photo-card:hover {
+   transition-duration: 250ms;
+   transform: scale(1.01);
+}
 
 .img-item {
    width: 100%;
